--- a/step3/assets/index.html
+++ b/step3/assets/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,43 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css" />
 </head>
+
 <body>
-  
+
+  <div class="main-container">
+
+    <div class="inner-container">
+
+      <div class="inner-inner-container">
+        <h1 class="header">SimpleWheels <span><img src="img/account.svg" alt=""></span></h1>
+
+        <p class="message">Thanks for your order #2357654, your package will be on it's way shortly.</p>
+
+        <ul>
+          <li class="first">
+            <span>Chapelli Vintage Single Speed</span>
+            <span class="price">$317</span>
+          </li>
+
+          <li class="second">
+            <span>Casteli Arenberg Gel Gloves</span>
+            <span class="price">$39</span>
+          </li>
+
+          <li class="third">
+            <span class="total">TOTAL</span>
+            <span class="price">$356</span>
+          </li>
+        </ul>
+
+        <img class="bike" src="img/bicycle.png" alt="">
+
+      </div>
+
+    </div>
+
+  </div>
+
 </body>
+
 </html>
